added GET /products && GET /clients
